
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int dosquash (int,unsigned char**) ;
 scalar_t__ getenv (char*) ;
 int prepare2 (int,char**) ;

int main(int argc, char *argv[]) {

 if (getenv("EGG")) dosquash(argc, (unsigned char **)argv);
 else prepare2(argc, argv);
 return 1;
}
